--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "name": "telegram-bot",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "start": "nodemon src/bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
