--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-TELEGRAM_TOKEN=7243007965:AAEBnTOdZxJiBkOvYivYQ7oQIjfVAu2OI60
+BOT_TOKEN=7243007965:AAEBnTOdZxJiBkOvYivYQ7oQIjfVAu2OI60
 CHANNEL_ID='abduqoodiir'
