--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "node-telegram-bot-api": "^0.66.0",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "telegraf": "^4.16.3"
   },
   "name": "telegram-bot",
   "version": "1.0.0",
